--- a/cros_gralloc/aidl/allocator_rpi.rc
+++ b/cros_gralloc/aidl/allocator_rpi.rc
@@ -1,4 +1,4 @@
-service vendor.graphics.allocator /vendor/bin/hw/android.hardware.graphics.allocator-V1-service.minigbm
+service vendor.graphics.allocator /vendor/bin/hw/android.hardware.graphics.allocator-V1-service.minigbm_rpi
     class hal animation
     user system
     group graphics drmrpc
